--- a/src/Layouts/Mobile/Mobile.scss
+++ b/src/Layouts/Mobile/Mobile.scss
@@ -219,22 +219,26 @@
 
         .container {
           position: absolute;
-          bottom: 8%;
+          // bottom: 20%;
+          height: 100%;
           h1 {
             font-family: "Montserrat", sans-serif;
+            margin-top: 20%;
           }
           h2 {
             text-align: center;
             font-size: 9vw;
             line-height: 9vw;
             font-weight: 600;
+            margin-top: 8vw;
           }
           h3 {
             font-size: 5vw;
             line-height: 5vw;
             // font-family: "Courier New", Courier, monospace;
             font-weight: 500;
-            margin-bottom: 8vw;
+            margin-top: 20%;
+
             span {
               font-weight: 600;
             }
@@ -242,7 +246,7 @@
         }
         .ScrollButton {
           right: 40%;
-          bottom: 3%;
+          bottom: 0%;
           .chevron {
             &:before,
             &::after {
@@ -279,35 +283,33 @@
         }
         .container {
           position: absolute;
-          bottom: 13%;
+          display: flex;
+          flex-direction: column;
+          justify-content: end;
+          height: 100%;
+          align-items: center;
 
-          // h1 {
-          //   font-family: "Montserrat", sans-serif;
-          //   font-size: 15vw;
-          //   line-height: 15vw;
-          //   color: #e4ff26;
-          //   text-align: center;
-
-          //   span {
-          //     color: #ffff;
-          //     font-size: 15vw;
-          //     line-height: 15vw;
-          //   }
-          // }
+          h1 {
+            margin-bottom: 30%;
+            position: absolute;
+            top: 3%;
+            font-size: 15vw;
+            text-align: center;
+          }
           h2 {
             text-align: center;
-            font-size: 9vw;
+            font-size: 10vw;
             line-height: 9vw;
             font-weight: 600;
-
-            // span {
-            //   margin-left: 33%;
-            // }
+            margin-bottom: 20%;
           }
           h3 {
             font-size: 5vw;
             line-height: 5vw;
+            // margin-top: 50%;
             // font-family: "Courier New", Courier, monospace;
+            margin-bottom: 30%;
+
             font-weight: 500;
             span {
               font-weight: 600;
@@ -335,6 +337,7 @@
         background-image: url("../../images/mobile/Beauty.jpg");
         font-family: "Montserrat", sans-serif;
         display: flex;
+        flex-direction: column;
         .overlay {
           // background-color: black;
           background-image: linear-gradient(
@@ -356,8 +359,14 @@
         .container {
           // justify-content: space-between;
           position: absolute;
-          bottom: 8%;
+          bottom: 3%;
           padding: 0 1vw;
+          position: absolute;
+          display: flex;
+          flex-direction: column;
+          justify-content: end;
+          height: 100%;
+          align-items: center;
           h1,
           h2,
           h3 {
@@ -378,29 +387,34 @@
             text-align: center;
           }
           h2 {
-            font-size: 7vw;
-            line-height: 5vw;
+            font-size: 10vw;
+            line-height: 8vw;
             margin-bottom: 6vw;
             text-shadow: 0 0 20px black;
             width: 100%;
             text-align: center;
             font-weight: 600;
+            // margin-top: 10vw;
+            margin-bottom: 10vw;
+
             span {
               font-weight: 700;
               font-size: 9vw;
             }
           }
           h3 {
-            font-size: 5vw;
-            line-height: 6vw;
+            font-size: 6vw;
+            line-height: 7vw;
             // text-shadow: 0 0 40px black;
             text-align: center;
             font-weight: 600;
+            margin-bottom: 10vw;
+
             color: rgb(255, 255, 255);
 
             span {
               color: #000000;
-              font-size: 5vw;
+              font-size: 7vw;
               font-weight: 500;
             }
           }
@@ -447,8 +461,10 @@
           // }
         }
         .ScrollButton {
-          right: 40%;
-          bottom: 3%;
+          left: 47%;
+          position: absolute;
+          bottom: 1%;
+
           .chevron {
             &:before,
             &::after {
